# GRPO-synthesis

./: .gitignore  README.md  finetune_example.py  generate_episodes.py  inference_example.py  pyproject.toml  train.py
fine_tuning/: policy.py  rollout.py  types.py  update.py  utils.py
fine_tuning/grpo/: policy.py  rollout.py  types.py  utils.py
qwen/: __init__.py  config.py  model.py  modules.py  utils.py
tasks/: countdown_task.py  test_countdown.py
tokenizer/: tokenizer.py
utils/: inference.py  loading.py  logging.py  serialization.py
